--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/launcher/launcher.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/launcher/launcher.less
@@ -31,7 +31,6 @@
 .launcher-panel {
 
   position: fixed;
-  overflow: hidden;
   top: 0;
   right: 0;
   height: 100%;
@@ -40,6 +39,7 @@
   font-family: @admin-font-family;
 
   .app-row-selected {
+    width: 100%;
     background-color: rgba(255, 255, 255, 0.3);
     .app-info .app-description {
       color: @admin-white;
@@ -92,6 +92,7 @@
     color: @admin-white;
     font-size: 25px;
     display: table;
+    overflow: hidden;
 
     .container-title {
       .ellipsis();
@@ -211,6 +212,72 @@
       vertical-align: middle;
     }
 
+  }
+
+  .launcher-tip {
+    display: none;
+    position: absolute;
+    padding: 0;
+    height: @header-height - 7px;
+    left: -105px;
+
+    -webkit-animation: bounce 1s ease-out 5s 2; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: bounce 1s ease-out 5s 2; /* Firefox < 16 */
+    -ms-animation: bounce 1s ease-out 5s 2; /* Internet Explorer */
+    -o-animation: bounce 1s ease-out 5s 2; /* Opera < 12.1 */
+    animation: bounce 1s ease-out 5s 2;
+
+    @keyframes bounce {
+      0% {
+        left: -105px;
+      }
+      50% {
+        left: -85px;
+
+      }
+      100% {
+        left: -105px;
+      }
+    }
+
+    span {
+      -webkit-animation: fadein 12s linear 2s; /* Safari, Chrome and Opera > 12.1 */
+      -moz-animation: fadein 12s linear 2s; /* Firefox < 16 */
+      -ms-animation: fadein 12s linear 2s; /* Internet Explorer */
+      -o-animation: fadein 12s linear 2s; /* Opera < 12.1 */
+      animation: fadein 12s linear 2s;
+      opacity: 0;
+      display: table-cell;
+      vertical-align: bottom;
+      color: @admin-white;
+      font-size: 14px;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      white-space: nowrap;
+
+      &:after {
+        position: absolute;
+        font-size: 32px;
+        font-family: 'icomoon';
+        content: "\e3b5";
+        line-height: 14px;
+      }
+
+      @keyframes fadein {
+        0% {
+          opacity: 0;
+        }
+        20% {
+          opacity: 1;
+        }
+        80% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+        }
+      }
+    }
   }
 }
 
